--- a/src/styles/_particles.scss
+++ b/src/styles/_particles.scss
@@ -4,9 +4,9 @@ canvas {
 }
 
 #particles-js {
-  position: absolute;
+  // position: absolute;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   // background: #1d2844; // #00356b
   background: #0a043c;
   z-index: -1000;
