--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap");
+canvas {
+  display: block;
+}
+
+#particles-js {
+  width: 100%;
+  height: 100vh;
+  background: #0a043c;
+  z-index: -1000;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +19,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -40,6 +52,10 @@ a {
 .navbar.scrolled {
   padding: 0.3125rem 0;
   background: #6736dd;
+}
+
+.navbar.scrolled .logo a span {
+  color: #fff;
 }
 
 .navbar.scrolled .menu_links a:hover {
@@ -190,15 +206,46 @@ a {
   letter-spacing: 0.125rem;
 }
 
-canvas {
-  display: block;
+.about {
+  background-color: whitesmoke;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100vh;
+  width: 100vw;
 }
 
-#particles-js {
+.about_contents {
+  color: #0b3675;
+  color: black;
+}
+
+.about_contents h1 {
+  font-size: 3.4375rem;
+}
+
+.about_contents p {
+  font-size: 1.5rem;
+}
+
+.about_contents a {
+  text-decoration: none;
+  background: inherit;
+  padding: 15px;
+  display: inline-block;
+  margin: 20px 0;
+  border: 2px solid black;
+  border-radius: 2px;
+  color: black;
   position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #0a043c;
-  z-index: -1000;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.about_contents a:hover {
+  -webkit-transform: translateY(-5px);
+          transform: translateY(-5px);
+  -webkit-box-shadow: 3px 6px #111;
+          box-shadow: 3px 6px #111;
 }
 /*# sourceMappingURL=globals.css.map */
