--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -26,11 +26,20 @@
       border-radius: 2px;
       color: black;
       position: absolute;
-      transition: 300ms ease-in-out;
+      user-select: none;
+
+      transform: translateY(0);
+      box-shadow: 0 0 #111;
+      transition: 100ms ease-in-out;
 
       &:hover {
         transform: translateY(-5px);
-        box-shadow: 3px 6px #111;
+        box-shadow: 5px 7px #111;
+      }
+
+      &:active {
+        transform: translateY(0);
+        box-shadow: 0 0 #111;
       }
     }
   }
