--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -18,9 +18,28 @@
 
     .menu_links {
       a {
+        &:after {
+          content: "";
+          position: absolute;
+          top: 2.56rem;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 0.1875rem;
+          transform: scaleY(0);
+          background-color: #fff;
+
+          transition: transform 0.3s;
+        }
+
         &:hover {
-          text-decoration: underline;
           color: #fff;
+          transform: none;
+
+          &:after {
+            transform: scaleY(1);
+          }
         }
       }
     }
@@ -57,7 +76,10 @@
           font-weight: 600;
           transition: 300ms ease-in-out;
 
+          display: inline-block;
+
           &:hover {
+            transform: scale(1.05);
             color: dodgerblue; // #12c3f7, #1c6dd0
           }
         }
