--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -74,15 +74,33 @@
           margin-bottom: 10px;
         }
 
-        p {
-          font-size: 20px;
-          vertical-align: middle;
-          display: inline-block;
-          text-align: start;
+        div {
+          text-align: center;
+          padding: 5px 2px;
+          border: 1px solid white;
+          border-radius: 2px;
           transition: 300ms ease-in-out;
 
           &:hover {
+            background-color: white;
+            color: #240c5c;
             transform: scale(1.08);
+            box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.7);
+          }
+
+          &:active {
+            transform: scale(1);
+            transition: 150ms ease-in-out;
+          }
+
+          p {
+            margin: 5px;
+            font-size: 20px;
+            vertical-align: middle;
+            display: inline-block;
+            text-align: start;
+            transition: 300ms ease-in-out;
+            user-select: none;
           }
         }
 
