--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,9 +58,33 @@ a {
   color: #fff;
 }
 
+.navbar.scrolled .menu_links a:after {
+  content: "";
+  position: absolute;
+  top: 2.56rem;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 0.1875rem;
+  -webkit-transform: scaleY(0);
+          transform: scaleY(0);
+  background-color: #fff;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
 .navbar.scrolled .menu_links a:hover {
-  text-decoration: underline;
   color: #fff;
+  -webkit-transform: none;
+          transform: none;
+}
+
+.navbar.scrolled .menu_links a:hover:after {
+  -webkit-transform: scaleY(1);
+          transform: scaleY(1);
 }
 
 .navbar_contents .logo a {
@@ -93,9 +117,12 @@ a {
   font-weight: 600;
   -webkit-transition: 300ms ease-in-out;
   transition: 300ms ease-in-out;
+  display: inline-block;
 }
 
 .navbar_contents .menu_links li a:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
   color: dodgerblue;
 }
 
@@ -246,8 +273,8 @@ a {
           transform: translateY(0);
   -webkit-box-shadow: 0 0 #111;
           box-shadow: 0 0 #111;
-  -webkit-transition: 100ms ease-in-out;
-  transition: 100ms ease-in-out;
+  -webkit-transition: 250ms ease-in-out;
+  transition: 250ms ease-in-out;
 }
 
 .about_contents a:hover {
@@ -344,18 +371,43 @@ a {
   margin-bottom: 10px;
 }
 
-.skills_items .skills_list li p {
+.skills_items .skills_list li div {
+  text-align: center;
+  padding: 5px 2px;
+  border: 1px solid white;
+  border-radius: 2px;
+  -webkit-transition: 300ms ease-in-out;
+  transition: 300ms ease-in-out;
+}
+
+.skills_items .skills_list li div:hover {
+  background-color: white;
+  color: #240c5c;
+  -webkit-transform: scale(1.08);
+          transform: scale(1.08);
+  -webkit-box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.7);
+          box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.7);
+}
+
+.skills_items .skills_list li div:active {
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: 150ms ease-in-out;
+  transition: 150ms ease-in-out;
+}
+
+.skills_items .skills_list li div p {
+  margin: 5px;
   font-size: 20px;
   vertical-align: middle;
   display: inline-block;
   text-align: start;
   -webkit-transition: 300ms ease-in-out;
   transition: 300ms ease-in-out;
-}
-
-.skills_items .skills_list li p:hover {
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .skills_items .skills_list li img {
