--- a/src/styles/_skills.scss
+++ b/src/styles/_skills.scss
@@ -1,14 +1,13 @@
 .skills {
   height: 100vh;
   width: 100%;
-  background: #240c5c;
-  color: white;
+  // background: #240c5c;
+  background: #f0f0f0;
+  // color: white;
+  color: black;
 
   display: flex;
   text-align: center;
-
-  &_contents {
-  }
 
   &_intro {
     h1 {
@@ -40,7 +39,8 @@
     transition: 300ms ease-in-out;
 
     &:hover {
-      background: #5421ca;
+      // background: #5421ca;
+      background: #c8c8c8;
       box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.4);
       transform: scale(1.03, 1.03);
     }
@@ -58,7 +58,8 @@
         height: 2px;
         margin-top: -30px;
         margin-bottom: 30px;
-        background: white;
+        // background: white;
+        background: black;
 
         &:hover {
           border: 1px solid white;
@@ -77,13 +78,15 @@
         div {
           text-align: center;
           padding: 5px 2px;
-          border: 1px solid white;
+          // border: 1px solid white;
+          border: 1px solid black;
           border-radius: 2px;
           transition: 300ms ease-in-out;
 
           &:hover {
-            background-color: white;
-            color: #240c5c;
+            background-color: #e4e4e4;
+            // color: #240c5c;
+            color: black;
             transform: scale(1.08);
             box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.7);
           }
